# fsglue

./: .coveragerc  .gitignore  LICENSE  Pipfile  README.md  README.rst  setup.cfg  setup.py  tox.ini
docs/: client.html  conf.py  exception.html  genindex.html  index.html  index.rst  model.html  objects.inv  property.html  search.html  searchindex.js
docs-src/: model.rst
docs/.doctrees/: client.doctree  environment.pickle  exception.doctree  index.doctree  intro.doctree  model.doctree  property.doctree
docs/_build/doctrees/: environment.pickle  fsglue.doctree  index.doctree
docs/_build/html/: .buildinfo  client.html  exception.html  fsglue.html  genindex.html  index.html  model.html  objects.inv  property.html  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/fsglue/: client.html  exceptions.html  model.html  property.html
docs/_sources/: exception.rst.txt  index.rst.txt  property.rst.txt
source/_build/: client.html  exception.html  fsglue.html  genindex.html  index.html  intro.html  model.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  top.html
source/_build/.doctrees/: client.doctree  environment.pickle  exception.doctree  fsglue.doctree  index.doctree  intro.doctree  model.doctree  top.doctree  (+2 more)
src/fsglue/: __init__.py  client.py  exceptions.py  model.py  property.py
tests/: setup_env.py  test_model.py
tests/model/: test_flat.py  test_model.py  test_nested.py
tests/property/: test_computed_property.py  test_custom_property.py  test_json_property.py  test_timestamp_property.py
(+18 files in other folders)
