[metadata]
name = fsglue
version = attr: src.fsglue.__version__
url = https://github.com/g0e/fsglue
author = g0e
author_email = osogoe@g0e.net
license = MIT
license_file = LICENSE
description = cloud firestore orm inspired by ndb
long_description = file: README.md

[options]
packages = find:
package_dir = = src
install_requires =
    google-cloud-firestore
    jsonschema

[options.packages.find]
where = src